tests/paczka1/fuzzy1/36384788.err
Error in line 3: yRhqmn A281 80,9
Error in line 4: PIf A281 68,5
Error in line 10: eErjPYv3 A281 75,7
